refactor: repository를 이용해 persistence layer와 서비스 로직 분리